# Sapphire-Assistant-Framework-Python

./: LICENSE  README.md  assistant.service  command-formatter.py  core.py  padatious-parser.py  pyproject.toml  resources.txt  setup-database.sh  sphinx-server.py  sqldatabase.py
assistant/: .assistant_profile  assistant.service  command-formatter.py  core-redux.py  core.py  depreciated-core.py  entity-extractor.py  final-discovery  nltk-parser.py  padatious-keras.py  padatious-parser.py  reset-db  selflib.py  setup-database.sh  simple-server-node.py  sqldatabase.py  udp-client.py  vosk-server.py  wake-work.py
assistant/bots/journal/: main.py
assistant/bots/tag/: main.py
assistant/bots/wiki/: hyperlink_manager.py  settings.conf  tag_search.py
assistant/daemons/spellbook/: linker_daemon.py  simple_spellbook_daemon.py  spellbook_daemon.py  tag_daemon.py
assistant/database-prep/: commands-csv  utterance-csv
assistant/manual/: index.org
assistant/skills/alarm/: set.intent
assistant/skills/weather/: weather.intent
